--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     
-
+    <div id="angles"></div>
     <h1>
         Chocolate Pizza
     </h1>
@@ -35,7 +35,6 @@
     </p>
 
     <div id="ingredients">
-        <img id="lined" src="./assets/assets/list-bg.png">
 
         <ul id="ul1">
             <input type="checkbox" name="ingredient" class="strikethrough" value="milk"> 
@@ -69,6 +68,11 @@
             <label class="strikeThis">1 cup honey roasted pecans, roughly chopped</label><br>  
         </ul>
     </div>
+
+    <footer>
+        <div id="angles"></div>
+
+    </footer>
 
     <script type="module" src="app.js"></script>
 </body>
