--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-
+<header>
+    <div id="branding">
+        <img id="logo" src="assets/lab-assets/logo.png">
+        <div id="branding-text">
+            <h3>Delicious</h3>
+            <p id="best">THE BEST FOOD BLOG ON THE WEB.</p>
+        </div>
+    </div>
+    <nav>
+        <div class="nav-div" id="rss">
+            <img class="icon" src="assets/lab-assets/rss-icon.png">
+            <img class="icon" src="assets/lab-assets/mail-icon.png">
+        </div>
+        <div class="nav-div">
+            <img class="icon" src="assets/lab-assets/fb-icon.png">
+            <img class="icon" src="assets/lab-assets/twit-icon.png">
+            <img class="icon" src="assets/lab-assets/gp-icon.png">
+            <img class="icon" src="assets/lab-assets/insta-icon.png">
+            <img class="icon" src="assets/lab-assets/flic-icon.png">
+            <img class="icon" src="assets/lab-assets/pint-icon.png">
+        </div>
+    </nav>
+</header>
 <body>
 
     <script type="module" src="app.js"></script>
