--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
 
     <footer>
         <div id="angles"></div>
+        
+        <p>       
+            <img id="headShot" src="./assets/assets/van-pic.png">
+            <h1>Vanessa Stevenson</h1>
+            Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.
+        </p>
+        <div id="button">
+            <button id="recipeButton" type="submit">SHARE RECIPE</button>
+        </div>
 
     </footer>
 
