--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <header>
     <div id="branding">
-        <img id="logo" src="assets/lab-assets/logo.png">
+        <img id="logo" src="./assets/lab-assets/logo.png">
         <div id="branding-text">
             <h3>Delicious</h3>
             <p id="best">THE BEST FOOD BLOG ON THE WEB.</p>
@@ -43,7 +43,7 @@
     </p>
     <div id="pizzaContainer">
 
-        <img id="chocolatePizza" src="./assets//assets/choco-pizza.png">
+        <img id="chocolatePizza" src="./assets/lab-assets/choco-pizza.png">
     </div>
 
     <p id="instructions">
@@ -96,7 +96,7 @@
         <div id="angles"></div>
         
         <p>       
-            <img id="headShot" src="./assets/assets/van-pic.png">
+            <img id="headShot" src="./assets/lab-assets/van-pic.png">
             <h1>Vanessa Stevenson</h1>
             Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.
         </p>
