--- a/index.html
+++ b/index.html
@@ -59,17 +59,19 @@
 
         <img id="chocolatePizza" src="./assets/lab-assets/choco-pizza.png">
     </div>
+    <div id="instructions">
+        <p>
+            For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.
+        </p>
 
-    <p id="instructions">
-        For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.
-    </p>
-
-    <p id="instructions">
-        Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely solved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the mixture is cooled.
-    </p>
-    <p id="instructions">
-        Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass Tupperware. Freeze for at least two hours before serving.
-    </p>
+        <p>
+            Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely solved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the mixture is cooled.
+        </p>
+        <p>
+            Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass Tupperware. Freeze for at least two hours before serving.
+        </p>
+    </div>
+    
 
     <div id="ingredients">
 
